--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.ico">
