update style and structure

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
+        <meta name="description" content="really cool and original homepage">
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="icon" type="image/png" href="favicon.ico">
     </head>
+    <body>
+        <h1>Samuel Kunst</h1>
+        Hello this is a sample paragraph. Here is some typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing. And here is some more typing.
+    <hr>
+    <div class="contact-links">
+        <div class="contact-links github"> </div>
+        <div class="contact-links email"> </div>
+        <div class="contact-links linkedin"> </div>
+        <div class="contact-links twitter"> </div>
+    </div>
 
-<body>
-</body>
-
+    </body>
 </html>
