fix hyperlink highlighting

--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, height=device-height, user-scalable=no"><meta name="description" content="Samuel Kunst's homepage"><title> Samuel Kunst</title><style>body{margin:30px auto;padding:0px 10px 0px 10px;max-width:550px;line-height:1.6;background:#f2f2f2;color:#444;font-family:arial}img{-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;user-select:none;-webkit-user-drag:none;user-drag:none;-webkit-touch-callout:none}.contact-links img{height:25px}.links th{padding:0px 8px 0px 8px}.splash-img{margin-bottom:20px}a{color:inherit;text-decoration:none}a:hover{color:#666}.contact-links th{padding:0px 8px 0px 8px}</style></head><body><center><h2>samuel kunst</h2> <a href="index.html"> <img class="splash-img" src="media/stencil-alt.svg"> </a><div class="links"><table style="border: none"><th> <a href="about.html"><h4>about</h4> </a></th><th> <a href="resume.html"><h4 style="color:#666666">resume</h4> </a></table></th></div><div class="contact-links"><h4> contact</h4><table style="border: none"><th><div class="contact-links github"><a href="https://github.com/toalaah"><img src="media/github-icon.png"></a></div></th><th><div class="contact-links email"><a href="mailto:samuel.kunst@gmail.com"><img src="media/mail-icon.png"></a></div></th><th><div class="contact-links linkedin"><a href="https://linkedin.com/in/samuel-kunst-1abb4172/"><img src="media/linkedin-icon.png"></a></div></th></table></div></center></body></html>
+<html lang="en">
+
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
+        <meta name="description" content="Samuel Kunst's homepage">
+        <title> Samuel Kunst</title>
+        <style>
+                body {
+                        margin: 30px auto;
+                        padding: 0px 10px 0px 10px;
+                        max-width: 550px;
+                        line-height: 1.6;
+                        background: #f2f2f2;
+                        color: #444;
+                        font-family: arial
+                }
+
+                img {
+                        -moz-user-select: none;
+                        -webkit-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
+                        -webkit-user-drag: none;
+                        user-drag: none;
+                        -webkit-touch-callout: none
+                }
+
+                .contact-links img {
+                        height: 25px
+                }
+
+                .links th {
+                        padding: 0px 8px 0px 8px
+                }
+
+                .splash-img {
+                        margin-bottom: 20px
+                }
+
+                a {
+                        color: inherit;
+                        text-decoration: none
+                }
+
+                a:hover {
+                        color: #666
+                }
+
+                .contact-links th {
+                        padding: 0px 8px 0px 8px
+                }
+        </style>
+</head>
+
+<body>
+        <center>
+                <h2>samuel kunst</h2> <a href="index.html"> <img class="splash-img" src="media/stencil-alt.svg"> </a>
+                <div class="links">
+                        <table style="border: none">
+                                <th> <a href="about.html">
+                                                <h4>about</h4>
+                                        </a></th>
+                                <th> <a href="resume.html">
+                                                <h4>resume</h4>
+                                        </a>
+                        </table>
+                        </th>
+                </div>
+                <div class="contact-links">
+                        <h4> contact</h4>
+                        <table style="border: none">
+                                <th>
+                                        <div class="contact-links github"><a href="https://github.com/toalaah"><img
+                                                                src="media/github-icon.png"></a></div>
+                                </th>
+                                <th>
+                                        <div class="contact-links email"><a href="mailto:samuel.kunst@gmail.com"><img
+                                                                src="media/mail-icon.png"></a></div>
+                                </th>
+                                <th>
+                                        <div class="contact-links linkedin"><a
+                                                        href="https://linkedin.com/in/samuel-kunst-1abb4172/"><img
+                                                                src="media/linkedin-icon.png"></a></div>
+                                </th>
+                        </table>
+                </div>
+        </center>
+</body>
+
+</html>
