--- a/index.html
+++ b/index.html
@@ -1,91 +1,88 @@
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
-        <meta name="description" content="Samuel Kunst's homepage">
-        <title> Samuel Kunst</title>
-        <style>
-                body {
-                        margin: 30px auto;
-                        padding: 0px 10px 0px 10px;
-                        max-width: 550px;
-                        line-height: 1.6;
-                        background: #f2f2f2;
-                        color: #444;
-                        font-family: arial
-                }
-
-                img {
-                        -moz-user-select: none;
-                        -webkit-user-select: none;
-                        -ms-user-select: none;
-                        user-select: none;
-                        -webkit-user-drag: none;
-                        user-drag: none;
-                        -webkit-touch-callout: none
-                }
-
-                .contact-links img {
-                        height: 25px
-                }
-
-                .links th {
-                        padding: 0px 8px 0px 8px
-                }
-
-                .splash-img {
-                        margin-bottom: 20px
-                }
-
-                a {
-                        color: inherit;
-                        text-decoration: none
-                }
-
-                a:hover {
-                        color: #666
-                }
-
-                .contact-links th {
-                        padding: 0px 8px 0px 8px
-                }
-        </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=2">
+    <meta name="description" content="Samuel Kunst's homepage">
+    <link rel="shortcut icon" href="#" />
+    <title> Samuel Kunst</title>
+    <style>
+body{margin:30px auto;max-width:75%;line-height:1.8;background:#f2f2f2;color:#444;font-family:arial}.contact-links img{height:25px}.links th{padding:0 8px 0 8px}.splash-img{margin-bottom:20px}.clickable,a{cursor:pointer;color:#444;text-decoration:none}.clickable:hover,a:hover{color:#666}.contact-links th{padding:0 8px 0 8px}.about-wrapper{display:none}.resume-wrapper{display:none}
+    </style>
 </head>
-
 <body>
-        <center>
-                <h2>samuel kunst</h2> <a href="index.html"> <img class="splash-img" src="media/stencil-alt.svg"> </a>
-                <div class="links">
-                        <table style="border: none">
-                                <th> <a href="about.html">
-                                                <h4>about</h4>
-                                        </a></th>
-                                <th> <a href="resume.html">
-                                                <h4>resume</h4>
-                                        </a>
-                        </table>
-                        </th>
-                </div>
-                <div class="contact-links">
-                        <h4> contact</h4>
-                        <table style="border: none">
-                                <th>
-                                        <div class="contact-links github"><a href="https://github.com/toalaah"><img
-                                                                src="media/github-icon.png"></a></div>
-                                </th>
-                                <th>
-                                        <div class="contact-links email"><a href="mailto:samuel.kunst@gmail.com"><img
-                                                                src="media/mail-icon.png"></a></div>
-                                </th>
-                                <th>
-                                        <div class="contact-links linkedin"><a
-                                                        href="https://linkedin.com/in/samuel-kunst-1abb4172/"><img
-                                                                src="media/linkedin-icon.png"></a></div>
-                                </th>
-                        </table>
-                </div>
-        </center>
+    <center>
+        <h2>samuel kunst</h2>
+        <span class="clickable" onclick="loadIndex();"> 
+        <img class="splash-img" src="media/stencil-alt.svg"> 
+        </span>
+        <div class="links">
+            <table style="border: none">
+                <th>
+                    <span class="clickable" onclick="loadAbout();">
+                        <h4 id="abt">about</h4>
+                    </span>
+                </th>
+                <th>
+                    <span class="clickable" onclick="loadResume();">
+                        <h4 id="res">resume</h4>
+                    </span>
+            </table>
+            </th>
+        </div>
+    </center>
+    <div class="about-wrapper">
+        <div class="content-about">i am currently stuying it-systems engineering at the hasso-plattner
+            institute in
+            potsdam. other than obviously being fond of technology and coding i also enjoy design and
+            especially
+            video-editing / production.
+        </div>
+    </div>
+    <div class="resume-wrapper">
+        should you want a more detailed resume you can either <b><a href="mailto:samuel.kunst@gmail.com">contact
+        me here</a></b> or use any of the links below
+        <div class="content-resume">
+            <h4>experience</h4>
+            <ul>
+                <li>08.19-10.19, — philip morris internaitonal, digital experience and design internship</li>
+                <li>03.17-12.17, — schlosscafé im palmenhaus, waiter / general service</li>
+                <li>07.17-08.17, — elgato systems, analysis of gaming trends and online presence in
+                    livestreaming
+                    services
+                </li>
+                <li>06.17-07.17, — appasionata park munich, stage lighting and sound design through
+                    digital
+                    simulations and sequencing
+                </li>
+            </ul>
+            <h4>education</h4>
+            <ul>
+                <li>2019-current‚ hasso plattner institute, it-systems engineering</li>
+                <li>2014-2019‚ — bavarian internaitonal school, ib diploma</li>
+                <li>2012-2014, — shore country day school</li>
+                <li>2007-2012, — bavarian international school</li>
+                <li>2003-2006, — kindergarten, swampscott, usa</li>
+            </ul>
+        </div>
+    </div>
+    <center>
+        <div class="contact-links">
+            <h4> contact</h4>
+            <table style="border: none">
+                <th>
+                    <div class="contact-links github"><a href="https://github.com/toalaah"><img
+                        src="media/github-icon.png"></a></div>
+                </th>
+                <th>
+                    <div class="contact-links email"><a href="mailto:samuel.kunst@gmail.com"><img
+                        src="media/mail-icon.png"></a></div>
+                </th>
+            </table>
+        </div>
+    </center>
 </body>
-
+<script>
+function loadAbout(){var e=document.getElementsByClassName("about-wrapper"),t=document.getElementsByClassName("resume-wrapper");e[0].style.display="block",t[0].style.display="none",setColor(0)}function loadResume(){var e=document.getElementsByClassName("about-wrapper"),t=document.getElementsByClassName("resume-wrapper");e[0].style.display="none",t[0].style.display="block",setColor(1)}function loadIndex(){var e=document.getElementsByClassName("about-wrapper"),t=document.getElementsByClassName("resume-wrapper");e[0].style.display="none",t[0].style.display="none",setColor(-1)}function setColor(e){var t=document.getElementById("abt"),l=document.getElementById("res");t.style.color="#444444",l.style.color="#444444",0==e?t.style.color="#666666":1==e&&(l.styl.color="#666666")}
+</script>
 </html>
