--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=2">
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0">
     <meta name="description" content="Samuel Kunst's homepage">
     <link rel="shortcut icon" href="#" />
     <title> Samuel Kunst</title>
