--- a/index.html
+++ b/index.html
@@ -45,24 +45,23 @@ body{margin:30px auto;max-width:75%;line-height:1.8;background:#f2f2f2;color:#44
         <div class="content-resume">
             <h4>experience</h4>
             <ul>
-                <li>08.19-10.19, — philip morris internaitonal, digital experience and design internship</li>
-                <li>03.17-12.17, — schlosscafé im palmenhaus, waiter / general service</li>
-                <li>07.17-08.17, — elgato systems, analysis of gaming trends and online presence in
+                <li>08.2019-10.2019 — philip morris international, digital experience and design internship, munich</li>
+                <li>03.2017-12.2017 — schlosscafé im palmenhaus, waiter / general service, munich</li>
+                <li>07.2017-08.2017 — elgato systems, analysis of gaming trends and online presence in
                     livestreaming
-                    services
-                </li>
-                <li>06.17-07.17, — appasionata park munich, stage lighting and sound design through
+                    services, munich
+		</li>
+                <li>06.2017-07.2017 — appasionata park munich, stage lighting and sound design through
                     digital
-                    simulations and sequencing
-                </li>
+                    simulations and sequencing, munich </li>
             </ul>
             <h4>education</h4>
             <ul>
-                <li>2019-current‚ hasso plattner institute, it-systems engineering</li>
-                <li>2014-2019‚ — bavarian internaitonal school, ib diploma</li>
-                <li>2012-2014, — shore country day school</li>
-                <li>2007-2012, — bavarian international school</li>
-                <li>2003-2006, — kindergarten, swampscott, usa</li>
+                <li>2019-current — hasso plattner institute, university of potsdam it-systems engineering</li>
+                <li>2014-2019 — bavarian international school, haimhausen, ib diploma</li>
+                <li>2012-2014 — shore country day school, beverly, ma/usa</li>
+                <li>2007-2012 — bavarian international school, haimhausen</li>
+                <li>2003-2006 — kindergarten, swampscott, ma/usa</li>
             </ul>
         </div>
     </div>
@@ -71,13 +70,16 @@ body{margin:30px auto;max-width:75%;line-height:1.8;background:#f2f2f2;color:#44
             <h4> contact</h4>
             <table style="border: none">
                 <th>
-                    <div class="contact-links github"><a href="https://github.com/toalaah"><img
+                    <div class="contact-links github"><a href="https://github.com/toalaah" target="_blank"><img
                         src="media/github-icon.png"></a></div>
                 </th>
                 <th>
                     <div class="contact-links email"><a href="mailto:samuel.kunst@gmail.com"><img
                         src="media/mail-icon.png"></a></div>
                 </th>
+		<th>
+			<div class="contact-links linkedin"><a href="https://www.linkedin.com/in/samuel-kunst" target="_blank"><img src="media/linkedin-icon.png"></a></div>
+		</th>
             </table>
         </div>
     </center>
